--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
         run: |
 
           ssh -i ~/.ssh/id_rsa adminesisa@154.144.237.194 << 'EOF'
-          {git clone git@github.com:M-Lahmer/flask-ms.git ; cd /home/adminesisa; }
+          cd /home/adminesisa/ || { git clone git@github.com:M-Lahmer/flask-ms.git /home/adminesisa; cd /home/adminesisa; }
           git pull origin main
           docker-compose down
           docker-compose up -d --build
