--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,8 @@ jobs:
         run: |
 
           ssh -i ~/.ssh/id_rsa adminesisa@154.144.237.194 << 'EOF'
-          cd /home/adminesisa/ || { git clone git@github.com:M-Lahmer/flask-ms.git /home/adminesisa; cd /home/adminesisa/flask-ms; }
+          git clone git@github.com:M-Lahmer/flask-ms.git 
+          cd flask-ms
           git pull origin main
           docker-compose down
           docker-compose up -d --build
